apps/ailab-website/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ailab
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ailab
  template:
    metadata:
      labels:
        app: ailab
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: type
                    operator: In
                    values:
                      - app-worker
      containers:
        - name: ailab
          image: ghcr.io/ai-cfia/ai-cfia-ia-acia.github.io:main
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: cache-volume
              mountPath: /home/node/.cache
            - name: tmp-volume
              mountPath: /tmp
      volumes:
        - name: cache-volume
          emptyDir: {}
        - name: tmp-volume
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: ailab-svc
spec:
  type: ClusterIP
  selector:
    app: ailab
  ports:
    - protocol: TCP
      port: 3000
