apps/ailab-website/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ailab-internal-ingress
  annotations:
    lbipam.cilium.io/ips: 10.140.79.8
    ingress.cilium.io/loadbalancer-mode: dedicated
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - ailab.inspection.alpha.canada.ca
      secretName: ailab-on-prem-tls
  rules:
    - host: ailab.inspection.alpha.canada.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ailab-svc
                port:
                  number: 3000
